<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2015 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
 -->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/com.example.android.sunshine.app"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <SwitchPreference
        android:defaultValue="true"
        android:key="notification"
        android:summary="enable/disable notifications"
        android:title="notification"/>

   <!-- <SwitchPreference
        android:defaultValue="false"
        android:key="dialog"
        android:summary="Show Dialog"
        android:title="Show Dialog"/>-->

    <ListPreference
        android:title="@string/pref_country_label"
        android:key="@string/pref_country_key"
        android:defaultValue="@string/pref_country_default"
        android:entryValues="@array/pref_country_values"
        android:entries="@array/pref_country_options" />

    <EditTextPreference
        android:defaultValue="20"
        android:inputType="number"
        android:key="search_count"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_count"/>

</PreferenceScreen>
